--- a/src/index.html
+++ b/src/index.html
@@ -15,6 +15,7 @@
 
     * {
       font-family: 'Work Sans', sans-serif;
+      outline: none;
     }
   </style>
   <link href="https://fonts.googleapis.com/css?family=Work+Sans:400,500,600,700,800&display=swap" rel="stylesheet">
